<resources>
    <string name="app_name">Weatherforecast</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_city_name">Enter city name</string>
    <string name="title_f">\u2109</string>
    <string name="title_c">℃</string>
    <string name="tit_wind">WIND</string>
    <string name="tit_feellike">FEELS LIKE</string>
    <string name="tit_cloud">CLOUD</string>
    <string name="tit_humity">HUMIDITY</string>
    <string name="tit_snow">SNOW</string>
    <string name="tit_view_curret">Click view weather detail of week</string>
    <string name="by_ok">OK</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chenge_temp">Switch</string>
    <string name="error_generic">Something went wrong. Please try again later.</string>
    <string name="wind_unite">%s meter/sec,</string>
    <string name="cloud_unite">scattered clouds: %s</string>
</resources>
